Add assets/js/main.js, modified:assets/css/styles.css,  modified:index.html,

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="ჩემი პროფესიონალური პორტფოლიო">
     <title>ჩემი პორტფოლიო</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/main.js"></script>
 </head>
 <body>
     <!-- ნავიგაცია -->
@@ -178,14 +179,14 @@
                         <div class="contact-icon">📧</div>
                         <div>
                             <h3>Email</h3>
-                            <p>your.email@example.com</p>
+                            <p>tsikaridzenika0@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📱</div>
                         <div>
                             <h3>ტელეფონი</h3>
-                            <p>+995 555 123 456</p>
+                            <p>+995 557 94 28 09</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -222,7 +223,7 @@
                 <p>&copy; 2026 თქვენი სახელი. ყველა უფლება დაცულია.</p>
                 <div class="social-links">
                     <a href="#" class="social-link">GitHub</a>
-                    <a href="#" class="social-link">LinkedIn</a>
+                    <a href="www.linkedin.com/in/nikoloz-tsikaridze-24658729b" class="social-link">LinkedIn</a>
                     <a href="#" class="social-link">Twitter</a>
                 </div>
             </div>
