Add Mafia game with private role reveal + update navigation

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#about" class="nav-link">ჩემს შესახებ</a></li>
                 <li><a href="#skills" class="nav-link">უნარები</a></li>
                 <li><a href="#projects" class="nav-link">პროექტები</a></li>
+                <li><a href="mafia.html" class="nav-link">თამაში</a></li>
                 <li><a href="#contact" class="nav-link">კონტაქტი</a></li>
             </ul>
         </nav>
