--- a/public/mafia.html
+++ b/public/mafia.html
@@ -13,7 +13,7 @@
             <div class="logo">MyPortfolio</div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">მთავარი</a></li>
-                <li><a href="mafia.html" class="nav-link active">Mafia თამაში</a></li>
+                <li><a href="mafia.html" class="nav-link active">Mafiaa თამაში</a></li>
             </ul>
         </nav>
     </header>
