--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <h2 class="section-title">ჩემს შესახებ</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>მიზნად მაქვს კომპლექსური სისტემების ავტომატიზაცია და ოპტიმიზაცია, რათა გუნდებს ჰქონდეთ სწრაფი, სტაბილური და უსაფრთხო განვითარება.<p>
+                    <p>მიზნად მაქვს კომპლექსური სისტემებისს ავტომატიზაცია და ოპტიმიზაცია, რათა გუნდებს ჰქონდეთ სწრაფი, სტაბილური და უსაფრთხო განვითარება.<p>
                     <p>ყოველთვის ვსწავლობ ახალ ტექნოლოგიებს და ვცდილობ გავაუმჯობესო ჩემი უნარები.</p>
                 </div>
                 <div class="about-stats">
